--- a/roles/deploy/tasks/main.yml
+++ b/roles/deploy/tasks/main.yml
@@ -1,5 +1,57 @@
 ---
 # tasks file for deploy
+- name: Create a resource group
+  azure_rm_resourcegroup:
+    name: "{{ resource }}"
+    location: eastus
+
+- name: Create vnet
+  azure_rm_virtualnetwork:
+    name: "{{ resource }}-vnet"
+    resource_group: "{{ resource }}"
+    address_prefixes_cidr:
+        - "10.0.0.0/24"
+
+- name: Create a subnet
+  azure_rm_subnet:
+    name: "{{ resource }}-subnet"
+    virtual_network_name: "{{ resource }}-vnet"
+    resource_group: "{{ resource }}"
+    address_prefix_cidr: "10.0.0.0/24"
+
+- name: Create a public ip address
+  azure_rm_publicipaddress:
+    resource_group: "{{ resource }}"
+    name: "{{ vmname }}-ip"
+
+- name: create security group
+  azure_rm_securitygroup:
+      resource_group: "{{ resource }}"
+      name: "{{ resource }}-security"
+      purge_rules: yes
+      rules:
+          - name: 'AllowSSH'
+            protocol: Tcp
+            destination_port_range: 22
+            access: Allow
+            priority: 1000
+            direction: Inbound
+
+- name: Create a network interface using existing security group and public IP
+  azure_rm_networkinterface:
+        name: "{{ vmname }}-nic"
+        resource_group: "{{ resource }}"
+        virtual_network_name: "{{ resource }}-vnet"
+        subnet_name: "{{ resource }}-subnet"
+        security_group_name: "{{ resource }}-security"
+        public_ip_address_name: "{{ vmname }}-ip"
+
+#- name: create a storage account
+#  azure_rm_storageaccount:
+#    resource_group: "{{ resource }}"
+#    name: "{{ vmname }}-storage"
+#    type: Standard_LRS
+
 - name: Create VM
   azure_rm_virtualmachine:
     resource_group: "{{ resource }}"
