--- a/roles/teardown/tasks/main.yml
+++ b/roles/teardown/tasks/main.yml
@@ -40,7 +40,7 @@
 - name: create a storage account
   azure_rm_storageaccount:
     resource_group: "{{ resource }}"
-    name: "{{ vmname }}-storage"
+    name: "{{ vmname }}sa"
     state: absent
 
 - name: Delete resource group
